# Yaride

./: .cursorrules  .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  miniapp_parity_audit.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  yaride.db
admin/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py  deps.py  geo_map.py  notifications.py
app/: analytics.py  bootstrap.py  bot.py  bot_support.py  cache.py  chat_ui.py  config.py  database.py  db.py  db_common.py  db_postgres.py  didit.py  driver_access.py  driver_license.py  filters.py  flow_mode_cfg.py  formatting.py  geo_catalog.py  geo_stops.py  geo_suggestion.py  middlewares.py  navigation_flow.py  rating_worker.py  repo.py  route_compute.py  seeds.py  sql_dialect.py  states.py  stop_coordinates.json  trip_flow.py  ui.py  yaride_calendar.py
docs/: council-2026-06-17.md  council-2026-06-21.md
miniapp/: .dockerignore  .env.example  DESIGN_HANDOFF.md  Dockerfile  LOVABLE_HANDOFF.md  README.md  index.html  package-lock.json  package.json  railway.toml  tailwind.config.js  vite.config.ts
scripts/: benchmark_baseline.txt  benchmark_db.py  geocode_route_stops.py  geocode_route_stops_nominatim.py  geocode_route_stops_osm.py  geocode_route_stops_search.py  geocode_route_stops_yandex.py  migrate_sqlite_to_postgres.py  railway_entry.py  railway_preflight.py  resync_stop_coordinates.py  start_prod.py  sync_db_railway.py  test_ymaps_v3_key.py
tests/: test_admin_auth.py  test_admin_geo_map.py  test_admin_schema_v6.py  test_admin_service.py  (+34 more)
(+195 files in other folders)
